--- a/cloudformation/EC2-Instance.yaml
+++ b/cloudformation/EC2-Instance.yaml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: Part 1 - Build a DBT stack with CloudFormation
 
 Resources:
-  WebAppInstance:
+  Aops_instance:
     Type: AWS::EC2::Instance
     Properties:
       ImageId: ami-0d5eff06f840b45e9 # ImageID valid only in us-east-1 region
