--- a/cloudformation/EC2-Instance.yaml
+++ b/cloudformation/EC2-Instance.yaml
@@ -7,7 +7,7 @@ Resources:
     Properties:
       ImageId: ami-0d5eff06f840b45e9 # ImageID valid only in us-east-1 region
       InstanceType: t2.micro
-      KeyName: AopsJenkins # <-- Change to use your key-pair name
+      KeyName: Aops_Jenkins # <-- Change to use your key-pair name
       SecurityGroupIds:
         - !Ref DBTSecurityGroup
 
