--- a/cloudformation/EC2-Instance.yaml
+++ b/cloudformation/EC2-Instance.yaml
@@ -32,3 +32,25 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 5439
+          ToPort: 5439
+          CidrIp: 0.0.0.0/0
+  
+  UserData:
+    Fn::Base64:
+      !Sub |
+      #!/bin/bash
+      echo "Updating the instance."
+      yum update -y
+      python -m install pip install --upgrade pip
+
+      echo "Install the DBT."
+      pip install dbt-core dbt-redshift
+      
+      echo "Create the dir for project."
+      sudo mkdir dbtAnalyticsProject
+      cd dbtAnalyticsProject
+      
+      echo "Initialize the dbt dir."
+      dbt  init
