--- a/cloudformation/EC2-Instance.yaml
+++ b/cloudformation/EC2-Instance.yaml
@@ -13,6 +13,8 @@ Resources:
       KeyName: Aops_Jenkins 
       SecurityGroupIds:
         - !Ref DBTSecurityGroup
+      UserData:
+        - !Ref DBTUserData
 
   DBTSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -36,3 +38,21 @@ Resources:
           FromPort: 5439
           ToPort: 5439
           CidrIp: 0.0.0.0/0
+
+  DBTUserData:
+    Fn::Base64:
+      !Sub |
+        #!/bin/bash
+        echo "Updating the instance."
+        yum update -y
+        python -m install pip install --upgrade pip
+
+        echo "Install the DBT."
+        pip install dbt-core dbt-redshift
+        
+        echo "Create the dir for project."
+        sudo mkdir dbtAnalyticsProject
+        cd dbtAnalyticsProject
+
+        echo "Initialize the dbt dir."
+        dbt  init
