--- a/cloudformation/EC2-Instance.yaml
+++ b/cloudformation/EC2-Instance.yaml
@@ -14,8 +14,7 @@ Resources:
       SecurityGroupIds:
         - !Ref DBTSecurityGroup
       UserData:
-        Fn::Base64:
-        !Sub |
+        Fn::Base64: !Sub |
           #!/bin/bash
           echo "Updating the instance."
           yum update -y
