--- a/cloudformation/EC2-Instance.yaml
+++ b/cloudformation/EC2-Instance.yaml
@@ -17,18 +17,19 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           echo "Updating the instance."
-          yum update -y
-          python -m install pip install --upgrade pip
+          sudo yum update -y
+          alias python=python3
+          sudo python -m install pip install --upgrade pip
 
           echo "Install the DBT."
-          pip install dbt-core dbt-redshift
+          sudo pip install dbt-core dbt-redshift
           
           echo "Create the dir for project."
           sudo mkdir dbtAnalyticsProject
           cd dbtAnalyticsProject
 
           echo "Initialize the dbt dir."
-          dbt  init
+          sudo dbt  init
 
   DBTSecurityGroup12:
     Type: AWS::EC2::SecurityGroup
